[package]
name = "simulator"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "sim"
path = "sim/main.rs"

[dependencies]
anyhow = { version = "1.0.75" }
arbiter-core = { version = "0.7.0", features = ["contracts"] }
ethers = { version = "2.0.10" }
serde = { version = "1.0.190", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }

[profile.release]
lto = true
