[tool.poetry]
name = "exactly"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
etheno = "^0.3a1"
slither-analyzer = "^0.8.3"
solc-select = "^0.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
